refactored to Java 9 HttpClient