@@ -16,36 +16,21 @@ import java.nio.charset.StandardCharsets;
 
 public class Utilities {
 
-    // For GET requests
-    public static HttpURLConnection createGetConnection(String address, String serverAddress, Long id) throws Exception {
-        URL url = new URL(address);
-        HttpURLConnection con = (HttpURLConnection) url.openConnection();
-        con.setRequestMethod("GET");
-        con.setRequestProperty("accept", "application/json");
-        con.setRequestProperty("id", String.valueOf(id));
-        con.setRequestProperty("referer", serverAddress);
-        con.setDoOutput(true);
-        con.connect();
-        int x = con.getResponseCode();
-        return con;
+    public static HttpResponse<String> createGetConnection(String address, String serverAddress, Long id) throws Exception {
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(new URI(address))
+                .headers("Content-Type", "application/json;charset=UTF-8")
+                .setHeader(serverAddress, String.valueOf(id))
+                .GET()
+                .build();
+        return HttpClient.newBuilder()
+                .build()
+                .send(request, HttpResponse.BodyHandlers.ofString());
     }
 
-    // For POST, PUT, and DELETE requests
-    public static HttpURLConnection createConnection(String address, String request) throws Exception {
-        URL url = new URL(address);
-        HttpURLConnection con = (HttpURLConnection) url.openConnection();
-        con.setRequestMethod(request);
-        con.setRequestProperty("Content-Type", "application/json; charset=utf-8");
-        con.setRequestProperty("accept", "*/*");
-        con.setRequestProperty("accept-encoding", "gzip,deflate,br");
-        con.setUseCaches(false);
-        con.setDoOutput(true);
-        con.connect();
-        return con;
-    }
-
-
-    public static HttpResponse<String> getPostConnectionJava9(String address, String json) throws URISyntaxException, java.io.IOException, InterruptedException {
+    public static HttpResponse<String> createPostConnection(String address, JsonObject jso) throws Exception {
+        Gson gson = new Gson();
+        String json = gson.toJson(jso);
         HttpRequest request = HttpRequest.newBuilder()
                 .uri(new URI(address))
                 .headers("Content-Type", "application/json;charset=UTF-8")
@@ -56,13 +41,27 @@ public class Utilities {
                 .send(request, HttpResponse.BodyHandlers.ofString());
     }
 
-    public static void outputJson(HttpURLConnection con, Gson gson, JsonObject json) throws IOException {
-        String str = gson.toJson(json);
-        try(OutputStream os = con.getOutputStream()) {
-            byte[] input = str.getBytes(StandardCharsets.UTF_8);
-            os.write(input, 0, input.length);
-        }
-        int y = con.getResponseCode();
-        con.disconnect();
+    public static HttpResponse<String> createPutConnection(String address, JsonObject jso) throws Exception {
+        Gson gson = new Gson();
+        String json = gson.toJson(jso);
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(new URI(address))
+                .headers("Content-Type", "application/json;charset=UTF-8")
+                .PUT(HttpRequest.BodyPublishers.ofString(json))
+                .build();
+        return HttpClient.newBuilder()
+                .build()
+                .send(request, HttpResponse.BodyHandlers.ofString());
+    }
+
+    public static HttpResponse<String> createDeleteConnection(String address) throws Exception {
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(new URI(address))
+                .headers("Content-Type", "application/json;charset=UTF-8")
+                .DELETE()
+                .build();
+        return HttpClient.newBuilder()
+                .build()
+                .send(request, HttpResponse.BodyHandlers.ofString());
     }
 }
